fixed carousel caption view from scrolling off screen on smaller viewports

--- a/src/app/styles/_carousel.scss
+++ b/src/app/styles/_carousel.scss
@@ -25,6 +25,10 @@
   .carousel-caption {
     letter-spacing: .3rem;
     font-size: 2.5rem;
+    position: absolute;
+    width: 50rem;
+    left: 50%;
+    margin-left: -25rem;
 
     .shadow {
       position: relative;
